test/errors/function/ref_args_incorrect_type.np
def fn(x: int) -> int:
    return x


f = fn
f("hello")
